# babelfish

./: .ftpconfig  .gitignore  .gitmodules  180823-fig.ipynb  180906_viz_models.ipynb  180912_viz_models_cool_frames.ipynb  180914_roi.ipynb  180916_roi.ipynb  180918_freeze.ipynb  180926_r.ipynb  180927_granger-f-test.ipynb  180930_granger-f-test.ipynb  180930_tf.ipynb  181001_tf.ipynb  181002_tf.ipynb  181002_voxels.ipynb  181003_PCA_granger.ipynb  181006_PCA_granger.ipynb  181010_pca_all.ipynb  181011_PCA_granger_all.ipynb  181011_PCA_granger_all_backup.ipynb  181012_aaron_helper.ipynb  181012_connectivity_viz-Copy1.ipynb  181012_connectivity_viz-tyler_backup.ipynb  181012_connectivity_viz.ipynb  181014_kanaka_viz.ipynb  181202_whole-brain.ipynb  181205_fix_video_diff.ipynb  190111_gad_vglut.ipynb  190112_cnmf_comparison.ipynb  Dockerfile  Dockerfile-bootstrap  Dockerfile-mlflow  FILE  MLproject  README.md  all_granger_PCA=1.npz  all_granger_PCA=1_nwindow=1.npz  all_granger_PCA=1_nwindow=3_decimate=8.npz  all_granger_PCA=3_nwindow=1.npz  (+32 more)
babelfish/: __init__.py  cmdline.py  data.py  default.nix  helpers.py  interpret.py  plot.py  requirements.txt  setup.py  stats.py  super_res.py  volume.py
cnmf_comparison/: 20190110_cnmf_LS.ipynb
cromwell/: README.md  find_files.wdl
deepfish/: data.py  deep_freeze.py  deep_kSVD.py  deep_skip.py  half_precision.py  helpers.py  misc.py  plot.py  resnet.py  stats.py  super_res.py  volume.py
docker/: Dockerfile  babelfish.nix  buildDocker.nix  cromwell.nix  (+6 more)
poetry/: nixpkgs.nix  poetry-shell.nix  poetry.md  poetry.nix  pyproject.toml
(+150 files in other folders)
