[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["tbenst <lensman@tylerbenster.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ssm = {git = "https://github.com/slinderman/ssm"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
